--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
-    "upgrade-projen": "npx projen upgrade-projen",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
@@ -40,25 +39,26 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
-    "@types/node": "^12",
+    "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "2.1.0",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "jest": "^26.6.3",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^27",
     "jest-junit": "^13",
-    "jsii": "^1.45.0",
-    "jsii-diff": "^1.45.0",
+    "jsii": "^1.59.0",
+    "jsii-diff": "^1.59.0",
     "jsii-docgen": "^1.8.110",
+    "jsii-pacmak": "^1.59.0",
     "json-schema": "^0.4.0",
     "npm-check-updates": "^12",
-    "projen": "^0.52.7",
+    "projen": "^0.56.39",
     "standard-version": "^9",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27",
     "typescript": "^3.9.10"
   },
   "peerDependencies": {
@@ -149,6 +149,9 @@
       "outDir": "lib",
       "rootDir": "src"
     }
+  },
+  "resolutions": {
+    "@types/prettier": "2.6.0"
   },
   "awscdkio": {
     "twitter": "@seeebiii",
